--- a/testdata/markdown.html
+++ b/testdata/markdown.html
@@ -7,6 +7,7 @@
   <p>Paragraph separated.<br><br>Two brs found.</p>
   <h2>Second section</h2>
   This part contains<a href="link"> two</a> links <a href="link2">here</a>
+  <h2>This title was in the same line</h2><p>as this paragraph
 </div>
 <div id="none" class="none">
   <h1>This doesn't appear</h1>
