Markdown filter: remove links with no text

--- a/testdata/markdown.html
+++ b/testdata/markdown.html
@@ -6,7 +6,7 @@
   the<br>body.
   <p>Paragraph separated.<br><br>Two brs found.</p>
   <h2>Second section</h2>
-  This part contains<a href="link"> two</a> links <a href="link2">here</a>
+  This part contains<a href="link"> two</a> links<a href="removethislink"> </a><a href="link2">here</a>
   <h2>This title was in the same line</h2><p>as this paragraph
 </div>
 <div id="none" class="none">
